--- a/index.css
+++ b/index.css
@@ -26,9 +26,10 @@ body{
 
 .quote{
     background-color: grey;
-    line-height: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    line-height: 20px;
     justify-content:center;
-    padding:20px;
+    padding:10px;
     border-style: dashed;
     border-color: black;
     border-radius: 50px;
@@ -45,7 +46,6 @@ body{
     font-size:15px;
     background-color: antiquewhite;
 }
-button{
-    border-radius: 10px;
-}
+
+
   
