--- a/index.css
+++ b/index.css
@@ -1,21 +1,25 @@
 body{
-    background-color:lightgray;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP0xY7Ze9AVOmmDBXmfTc7GptvuEQmMrnHMA&usqp=CAU);
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 15px;
     border-style: double;
 }
 .head{
-    background-color:grey;
+    background-color:lightgoldenrodyellow;
     text-align: center;
+    border-color: darkgoldenrod;
     font-weight:100;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
     font-display:inherit ;
-    border-radius: 50px;
-    padding:10px
+    border-radius: 10px;
+    border-color: darkgoldenrod;
     
 }
 #header {
-    background-color: lightslategray;
+    background-color:lightgoldenrodyellow;
+    border-color:darkgoldenrod;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -25,26 +29,24 @@ body{
   }
 
 .quote{
-    background-color: grey;
+    background-color:darkgoldenrod;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    line-height: 20px;
+    line-height: 25px;
     justify-content:center;
-    padding:10px;
+    padding:20px;
     border-style: dashed;
-    border-color: black;
+    border-color:lightgoldenrodyellow;
     border-radius: 50px;
 }
 .fwrite{
     padding:10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-radius: 20px;
-    border-style: dotted;
 }
 #tasklist{
-    padding:10px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size:15px;
-    background-color: antiquewhite;
+    font-size: 20px;
+    line-height: 70px;
+    border-radius: 20px;
 }
 
 
